# twitch_chat_logger

./: Cargo.toml  README.md  notes.txt  update.sh
src/: channel_config.rs  completer.rs  download  example.txt  main.rs  oldmain.rs  sound.rs
twitch-irc_local/: .cargo-checksum.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md
twitch-irc_local/examples/: simple_listener.rs
twitch-irc_local/src/: config.rs  error.rs  lib.rs  login.rs  metrics.rs  validate.rs
twitch-irc_local/src/client/: event_loop.rs  mod.rs
twitch-irc_local/src/connection/: event_loop.rs  mod.rs
twitch-irc_local/src/message/: mod.rs  prefix.rs  tags.rs  twitch.rs
twitch-irc_local/src/message/commands/: clearchat.rs  clearmsg.rs  globaluserstate.rs  join.rs  mod.rs  notice.rs  part.rs  ping.rs  pong.rs  privmsg.rs  reconnect.rs  roomstate.rs  usernotice.rs  userstate.rs  whisper.rs
twitch-irc_local/src/transport/: mod.rs  tcp.rs  websocket.rs
